<resources>
    <string name="app_name">营养处方</string>
    <string name="noplan">无处方</string>
    <string name="password">密码</string>
    <string name="username">手机号</string>
    <string name="email">邮箱</string>
    <string name="forget_password">忘记密码?</string>
    <string name="remenber_password">记住密码</string>
    <string name="phone_register">手机注册</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="loginout">退出登录</string>
    <string name="cancel">取消</string>
    <string name="time_picker">选择日期</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="show_loading_msg">正在加载...</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
